--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -132,6 +132,15 @@
     -fx-text-fill: #010504;
 }
 
+.cell_relationship_label {
+    -fx-text-fill: white;
+    -fx-background-color: #ffa500;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
+}
+
 .stack-pane {
      -fx-background-color: derive(#1d1d1d, 20%);
 }
@@ -340,6 +349,7 @@
 #tags {
     -fx-hgap: 7;
     -fx-vgap: 3;
+    -fx-padding: 5 0 0 0;
 }
 
 #tags .label {
@@ -350,3 +360,4 @@
     -fx-background-radius: 2;
     -fx-font-size: 11;
 }
+
