--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -120,6 +120,13 @@
     -fx-text-fill: white;
 }
 
+.cell_nickname_label {
+    -fx-font-family: "Arial";
+    -fx-font-style: italic;
+    -fx-font-size: 13px;
+    -fx-text-fill: white;
+}
+
 .cell_big_label {
     -fx-font-family: "Segoe UI Semibold";
     -fx-font-size: 16px;
@@ -133,7 +140,7 @@
 }
 
 .cell_relationship_label {
-    -fx-text-fill: white;
+    -fx-text-fill: black !important;
     -fx-background-color: #ffa500;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
