--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -26,6 +26,7 @@
           </minWidth>
         </Label>
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="nickname" styleClass="cell_nickname_label" text="\$nickname" />
       </HBox>
       <Label fx:id="relationship" styleClass="cell_relationship_label" text="\$relationship" />
       <FlowPane fx:id="tags" />
@@ -33,7 +34,6 @@
       <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
       <Label fx:id="birthday" styleClass="cell_small_label" text="\$birthday" />
-      <Label fx:id="nickname" styleClass="cell_small_label" text="\$nickname" />
       <Label fx:id="notes" styleClass="cell_small_label" text="\$notes" />
     </VBox>
   </GridPane>
