--- a/src/main/resources/view/HelpWindow.css
+++ b/src/main/resources/view/HelpWindow.css
@@ -14,6 +14,27 @@
     -fx-background-color: darkgray;
 }
 
-#helpMessageContainer {
+#helpContent {
     -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-padding: 10px;
+}
+
+#scrollPane {
+    -fx-background-color: derive(#1d1d1d, 20%);
+}
+
+#searchBar {
+    -fx-background-color: #2d2d2d;
+    -fx-text-fill: white;
+    -fx-prompt-text-fill: gray;
+}
+
+.text {
+    -fx-fill: white;
+}
+
+.code-block {
+    -fx-font-family: monospace;
+    -fx-background-color: #2d2d2d;
+    -fx-padding: 5px;
 }
