--- a/src/main/resources/view/HelpWindow.fxml
+++ b/src/main/resources/view/HelpWindow.fxml
@@ -5,8 +5,12 @@
 <?import javafx.scene.Scene?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.TextFlow?>
 <?import javafx.stage.Stage?>
 
 <fx:root resizable="false" title="Help" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
@@ -19,26 +23,41 @@
         <URL value="@HelpWindow.css" />
       </stylesheets>
 
-      <HBox alignment="CENTER" fx:id="helpMessageContainer">
-        <children>
-          <Label fx:id="helpMessage" text="Label">
-            <HBox.margin>
-              <Insets right="5.0" />
-            </HBox.margin>
-          </Label>
-          <Button fx:id="copyButton" mnemonicParsing="false" onAction="#copyUrl" text="Copy URL">
-            <HBox.margin>
-              <Insets left="5.0" />
-            </HBox.margin>
-          </Button>
-        </children>
-        <opaqueInsets>
-          <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
-        </opaqueInsets>
-        <padding>
-          <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
-        </padding>
-      </HBox>
+      <VBox alignment="TOP_CENTER" spacing="10" style="-fx-background-color: derive(#1d1d1d, 20%);">
+        <!-- Search Bar -->
+        <HBox alignment="CENTER" spacing="10" style="-fx-padding: 10;">
+          <TextField fx:id="searchBar" promptText="Search commands..." style="-fx-background-color: #2d2d2d; -fx-text-fill: white; -fx-prompt-text-fill: gray;" />
+          <Button fx:id="copyButton" mnemonicParsing="false" onAction="#copyUrl" text="Copy URL" />
+        </HBox>
+
+        <!-- Scrollable Help Content -->
+        <ScrollPane fx:id="scrollPane" fitToWidth="true" style="-fx-background-color: derive(#1d1d1d, 20%);">
+          <VBox fx:id="helpContent" spacing="10" style="-fx-padding: 10;">
+            <!-- Title -->
+            <TextFlow>
+              <Label text="WhoAreYouAgain? User Guide" style="-fx-font-size: 20px; -fx-font-weight: bold; -fx-text-fill: white;" />
+            </TextFlow>
+
+            <!-- Quick Start Section -->
+            <TextFlow>
+              <Label text="Quick Start" style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: white;" />
+              <Label text="\\n1. Ensure you have Java `17` or above installed in your Computer.\\n2. Download the latest `.jar` file from [here](https://github.com/se-edu/addressbook-level3/releases).\\n3. Copy the file to the folder you want to use as the _home folder_ for your AddressBook.\\n4. Open a command terminal, `cd` into the folder you put the jar file in, and use the `java -jar whoareyouagain.jar` command to run the application.\\n5. Type the command in the command box and press Enter to execute it. e.g. typing **`help`** and pressing Enter will open the help window.\\n\\n" style="-fx-text-fill: white;" />
+            </TextFlow>
+
+            <!-- Features Section -->
+            <TextFlow>
+              <Label text="Features" style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: white;" />
+              <Label text="\\n**Add**\\nFormat: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS [r/RELATIONSHIP] [nn/NICKNAME] [b/BIRTHDAY] [no/NOTES] [t/TAG]…​`\\n\\n**List**\\nFormat: `list`\\n\\n**Edit**\\nFormat: `edit INDEX [n/NAME] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [r/RELATIONSHIP] [nn/NICKNAME] [b/BIRTHDAY] [no/NOTES] [t/TAG]…​`\\n\\n**Find**\\nFormat: `find KEYWORD [MORE_KEYWORDS]`\\n\\n**Delete**\\nFormat: `delete INDEX…​`\\n\\n**Clear**\\nFormat: `clear`\\n\\n**Exit**\\nFormat: `exit`\\n\\n" style="-fx-text-fill: white;" />
+            </TextFlow>
+
+            <!-- Code Blocks -->
+            <TextFlow>
+              <Label text="Example: `add n/Nickie p/88888888 r/son e/nickie@gmail.com a/21 Lower Kent Ridge Rd, Singapore 119077 nn/nickelodeon b/2001-01-01 no/My favorite son`" style="-fx-font-family: monospace; -fx-background-color: #2d2d2d; -fx-padding: 5px; -fx-text-fill: white;" />
+              <Label text="\\nExample: `edit 1 p/91234567 e/johndoe@example.com`" style="-fx-font-family: monospace; -fx-background-color: #2d2d2d; -fx-padding: 5px; -fx-text-fill: white;" />
+            </TextFlow>
+          </VBox>
+        </ScrollPane>
+      </VBox>
     </Scene>
   </scene>
 </fx:root>
