Update CSS and add Title Masthead

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -1,6 +1,24 @@
+@font-face {
+    font-family: 'Space Mono';
+    src: url('../fonts/SpaceMono-Regular.ttf');
+}
+
 .background {
     -fx-background-color: #0d1117;
     background-color: #0d1117; /* Used in the default.html file */
+}
+
+.title-container {
+    -fx-background-color: #0d1117;
+    -fx-padding: 10px;
+}
+
+.title-label {
+    -fx-text-fill: white;
+}
+
+.version-label {
+    -fx-text-fill: white;
 }
 
 .label {
