Fix bug with regards to half-empty PersonListPanel
Fix bug which caused a grey box to appear when PersonListPanel is not
fully filled - i.e. had 1/2 contacts inside

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -118,6 +118,7 @@
     -fx-label-padding: 0 0 0 0;
     -fx-graphic-text-gap : 0;
     -fx-padding: 0 0 0 0;
+    -fx-background-color: #0d1117;
 }
 
 .list-cell:filled:even {
