--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -3,6 +3,11 @@
     src: url('../fonts/SpaceMono-Regular.ttf');
 }
 
+@font-face {
+    font-family: 'DejaVu Sans';
+    src: url('../fonts/DejaVuSans.ttf');
+}
+
 .background {
     -fx-background-color: #0d1117;
     background-color: #0d1117; /* Used in the default.html file */
@@ -51,7 +56,7 @@
 
 .tab-pane {
     -fx-padding: 0 0 0 1;
-    -fx-background-color: #0d1117;
+    -fx-background-color: #131921;
 }
 
 .tab-pane .tab-header-area {
@@ -247,7 +252,7 @@
 
 .button {
     -fx-padding: 5 22 5 22;
-    -fx-border-color: #58a6ff;
+    -fx-border-color: #313131;
     -fx-border-width: 2;
     -fx-background-radius: 0;
     -fx-background-color: #0d1117;
@@ -258,12 +263,13 @@
 }
 
 .button:hover {
-    -fx-background-color: #58a6ff;
+    -fx-background-color: #2c2c2c; /* Lighter gray */
+    -fx-text-fill: #c9d1d9; /* Keep text color the same */
 }
 
 .button:pressed, .button:default:hover:pressed {
-    -fx-background-color: #c9d1d9;
-    -fx-text-fill: #0d1117;
+    -fx-background-color: #3a3a3a; /* Slightly darker gray when pressed */
+    -fx-text-fill: #c9d1d9;
 }
 
 .button:focused {
@@ -280,13 +286,8 @@
     -fx-text-fill: #c9d1d9;
 }
 
-.button:default {
-    -fx-background-color: #58a6ff;
-    -fx-text-fill: #0d1117;
-}
-
 .button:default:hover {
-    -fx-background-color: derive(#58a6ff, 30%);
+    -fx-background-color: #2c2c2c; /* Keep consistent hover effect */
 }
 
 .dialog-pane {
@@ -383,4 +384,13 @@
     -fx-border-radius: 2;
     -fx-background-radius: 2;
     -fx-font-size: 11;
+}
+
+.menu-icon {
+    -fx-opacity: 1;
+}
+
+.menu-icon:hover {
+    -fx-effect: dropshadow(gaussian, rgba(255, 255, 255, 0.2), 5, 0, 0, 0);
+    -fx-opacity: 0.8;
 }
