--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -3,7 +3,6 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Scene?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -15,9 +14,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
-         title="WhoAreYouAgain?" minWidth="500" minHeight="600" >
+         title="who-are-you-again?" minWidth="500" minHeight="600" >
   <icons>
-    <Image url="@/images/address_book_32.png" />
+    <Image url="@/images/icons8-address-book-32.png" />
   </icons>
   <scene>
     <Scene>
@@ -28,7 +27,7 @@
 
       <SplitPane dividerPositions="0.2" styleClass="split-pane">
         <!-- Sidebar -->
-        <VBox fx:id="sidebar" styleClass="sidebar" minWidth="200" maxWidth="250">
+        <VBox fx:id="sidebar" minWidth="200" maxWidth="250">
           <!--Title Masthead-->
           <VBox alignment="CENTER_LEFT" styleClass="title-container">
             <Label text="who-are-you-again?" styleClass="title-label">
@@ -47,38 +46,30 @@
 
           <!-- Menu Items-->
           <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
-            <Menu mnemonicParsing="false" text="">
+            <Menu mnemonicParsing="false">
               <graphic>
                 <ImageView fx:id="closeIcon" fitWidth="24" fitHeight="24" styleClass="menu-icon">
-                  <image>
-                    <Image url="@/images/icons8-close-24.png" />
-                  </image>
+                  <Image url="@/images/icons8-close-24.png"/>
                 </ImageView>
               </graphic>
               <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit">
                 <graphic>
                   <ImageView fx:id="closeItemIcon" fitWidth="24" fitHeight="24" styleClass="menu-icon">
-                    <image>
-                      <Image url="@/images/icons8-close-24.png" />
-                    </image>
+                    <Image url="@/images/icons8-close-24.png"/>
                   </ImageView>
                 </graphic>
               </MenuItem>
             </Menu>
-            <Menu mnemonicParsing="false" text="">
+            <Menu mnemonicParsing="false">
               <graphic>
                 <ImageView fx:id="helpIcon" fitWidth="24" fitHeight="24" styleClass="menu-icon">
-                  <image>
-                    <Image url="@/images/icons8-info-24.png" />
-                  </image>
+                  <Image url="@/images/icons8-info-24.png"/>
                 </ImageView>
               </graphic>
               <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Get Help">
                 <graphic>
                   <ImageView fx:id="helpItemIcon" fitWidth="24" fitHeight="24" styleClass="menu-icon">
-                    <image>
-                      <Image url="@/images/icons8-info-24.png" />
-                    </image>
+                    <Image url="@/images/icons8-info-24.png"/>
                   </ImageView>
                 </graphic>
               </MenuItem>
