--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -128,6 +128,9 @@
 
 .list-cell:filled:even {
     -fx-background-color: #161b22;
+    -fx-border-width: 1;
+    -fx-background-radius: 20;
+    -fx-border-radius: 20;
 }
 
 .list-cell:filled:odd {
@@ -136,6 +139,9 @@
 
 .list-cell:filled:selected {
     -fx-background-color: #424242;
+    -fx-border-width: 1;
+    -fx-background-radius: 20;
+    -fx-border-radius: 20;
 }
 
 .list-cell:filled:selected #cardPane {
@@ -345,8 +351,11 @@
 }
 
 #cardPane {
-    -fx-background-color: transparent;
-    -fx-border-width: 0;
+    -fx-border-width: 1;
+    -fx-background-radius: 20;
+    -fx-border-radius: 20;
+    -fx-border-color: #2d3b4a;
+    -fx-padding: 10;
 }
 
 #commandTypeLabel {
