Re-order Help blocks
Re-order commands in Help Page in order to better accommodate
the order in which new users will refer to commands.

Order now prioritises frequently used commands like add, edit, delete.
These commands are shown higher up in the VBox.

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -44,7 +44,7 @@
             </Label>
           </VBox>
 
-          <!-- help Button -->
+          <!-- Help Button -->
           <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
             <Menu mnemonicParsing="false">
               <graphic>
@@ -61,7 +61,6 @@
               </MenuItem>
             </Menu>
           </MenuBar>
-
         </VBox>
 
         <!-- Main Content -->
